--- a/meta/main.yml
+++ b/meta/main.yml
@@ -4,7 +4,7 @@ dependencies: []
 
 galaxy_info:
   author: Robin Schneider
-  description: 'My rsyslog configratuion. Reconfigures log format and which files to log to.'
+  description: 'My rsyslog configuration. Reconfigures log format and to which files to log.'
   license: AGPLv3
   min_ansible_version: '1.2'
   platforms:
@@ -21,10 +21,17 @@ galaxy_info:
     - monitoring
 
 ansigenome_info:
+  github_url: "https://github.com/ypid/ansible-service-rsyslog"
+  git_branch: "master"
   galaxy_id: ''
 
   travis: True
 
   synopsis: |
     An example logline locks like this:
-    <syslog.info>1 Feb  1 18:59:31 mix-uno rsyslogd - - -  [origin software="rsyslogd" swVersion="8.4.2" x-pid="5870" x-info="http://www.rsyslog.com"] start
+
+        <syslog.info>1 Feb  1 18:59:31 mix-uno rsyslogd - - -  [origin software="rsyslogd" swVersion="8.4.2" x-pid="5870" x-info="http://www.rsyslog.com"] start
+
+    The log format is based on [RFC 3164](http://www.ietf.org/rfc/rfc3164.txt) with some modifications to make it easier readable for humans.
+
+    This role also changes some logrotate defaults.
