Updated syslog format.

--- a/files/rsyslog.conf
+++ b/files/rsyslog.conf
@@ -25,7 +25,10 @@ $ModLoad imklog   # provides kernel logging support
 #### GLOBAL DIRECTIVES ####
 ###########################
 
-$template SyslogProtocol23YPIDFormat,"<%PRI-TEXT%>1 %TIMESTAMP:::date-rfc3164% %HOSTNAME% %APP-NAME% %PROCID% %MSGID% %STRUCTURED-DATA% %msg%\n"
+## http://www.rsyslog.com/doc/master/configuration/property_replacer.html
+
+$template SyslogProtocol23YPIDFormat,"<%PRI-TEXT%>1\9%$NOW% %TIMESTAMP:8:$:%.%TIMESTAMP:::date-subseconds% %HOSTNAME% %APP-NAME% %PROCID% %MSGID% %STRUCTURED-DATA% %msg%\n" # One way to do it.
+# $template SyslogProtocol23YPIDFormat,"<%PRI-TEXT%>1 %$NOW% %TIMESTAMP:::date-year%-%TIMESTAMP:::date-month% %HOSTNAME% %APP-NAME% %PROCID% %MSGID% %STRUCTURED-DATA% %msg%\n" Too long :)
 # $ActionFileDefaultTemplate RSYSLOG_TraditionalFileFormat
 # $ActionFileDefaultTemplate RSYSLOG_SyslogProtocol23Format
 $ActionFileDefaultTemplate SyslogProtocol23YPIDFormat
