--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -7,8 +7,7 @@
     mode: 0640
     owner: root
     group: root
-  notify:
-    - restart rsyslog
+  notify: [ 'Restart rsyslog' ]
 
 - name: Configure logrotate
   copy:
@@ -17,11 +16,6 @@
     mode: 0640
     owner: root
     group: root
-
-- name: Configure logrotate
-  copy:
-    src: defaults-own
-    dest: /etc/logrotate.d/defaults-own
-    mode: 0640
-    owner: root
-    group: root
+  with_items:
+    - "rsyslog-own"
+    - "defaults-own"
