Use hyphen for not critical logfiles to not sync for every write.

--- a/files/rsyslog.conf
+++ b/files/rsyslog.conf
@@ -92,15 +92,18 @@ $IncludeConfig /etc/rsyslog.d/*.conf
 # 5: notice
 # 6: info
 # 7: debug
+#
+# hyphen (-) in front of a logfiles means to not sync for every write which can
+# be used for non-critical logfiles.
 
 #
 # First some standard log files.  Log by facility.
 #
-*.*;auth,authpriv.none;kern.none;user.!info;user.!=debug		/var/log/syslog
+*.*;auth,authpriv.none;kern.none;user.!info;user.!=debug		-/var/log/syslog
 auth,authpriv.*					/var/log/auth.log
 kern.*;kern.!=debug				/var/log/kern.log
-kern.=debug						/var/log/kern-debug.log
-user.=info;user.=debug			/var/log/user.info
+kern.=debug						-/var/log/kern-debug.log
+user.=info;user.=debug			-/var/log/user.info
 #daemon.*								/var/log/daemon.log
 #cron.*				/var/log/cron.log
 # lpr.*				/var/log/lpr.log
