Use replace instead of lineinfile.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -24,19 +24,9 @@
   raw: find /etc/logrotate.d/ -type f
   register: service_rsyslog_logrotate_files
 
-## FIXME needs to run multiple times.
 - name: Set nocompess for all files under /etc/logrotate.d/
-  lineinfile:
+  replace:
     dest: "{{ item }}"
-    line: '\1 no\2'
-    backrefs: yes
-    regexp: '^(\s+)(compress)$'
-  with_items: service_rsyslog_logrotate_files.stdout_lines
-
-- name: Set nocompess for all files under /etc/logrotate.d/
-  lineinfile:
-    dest: "{{ item }}"
-    line: '\1 no\2'
-    backrefs: yes
+    replace: '\1 no\2'
     regexp: '^(\s+)(compress)$'
   with_items: service_rsyslog_logrotate_files.stdout_lines
