Fixed deprecation warning from Ansible 2.1.0 and set default.
https://github.com/ypid/ypid-ansible-common/blob/master/bin/convert_tasks_to_ansible_2

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -32,4 +32,4 @@
     dest: '{{ item }}'
     replace: '\1 no\2'
     regexp: '^(\s+)(compress)$'
-  with_items: service_rsyslog_logrotate_files.stdout_lines
+  with_items: '{{ service_rsyslog_logrotate_files.stdout_lines|d([]) }}'
